@@ -1776,6 +1776,17 @@
       </component>
     </version>
   </module>
+  <module name="gwget">
+    <version release="gnome-2.8">
+      <component name="gwget" dir="gwget" group="extras">
+	<podir dir="po"/>
+	<potname name="gwget.pot"/>
+	<branch name="HEAD"/>
+	<regenerate/>
+	<download/>
+      </component>
+    </version>
+  </module>
   <module name="hardware-monitor">
     <version release="gnome-2.8">
       <component name="hardware-monitor" dir="hardware-monitor" group="fifth-toe">
