@@ -1,3 +1,7 @@
+2004-08-13  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: Added gwget to extras.
+
 2004-08-05  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: Added gnome-bluetooth and
